--- a/custom-blocks/carousel/carousel.css
+++ b/custom-blocks/carousel/carousel.css
@@ -16,6 +16,10 @@
 	height: 100%;
 	width: 100%;
 }
+.rad-carousel-item__inner :first-child {
+	padding-left: 10%;
+	padding-right: 10%;
+}
 /* animate text */
 .rad-carousel-item__inner > div > *:not(img) {
 	opacity: 0;
@@ -57,7 +61,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 15%;
+	width: 10%;
 	padding: 0;
 	text-align: center;
 	background: 0 0;
